--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
-  <title>Document</title>
+  <link rel="stylesheet" href="css/style.css">
+  <title>The Tech Blog</title>
 </head>
 
 <body>
-  
+
   <header>
     <h1>The Tech Blog</h1>
     <ul class="list-group d-flex flex-row justify-content-evenly">
@@ -22,8 +22,10 @@
     </ul>
   </header>
 
-  {{{body}}}
-
+  <main>
+    {{{body}}}
+  </main>
+  
 </body>
 
 </html>
