--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,4 +5,12 @@
         <p class="p-3">{{this.content}}</p>
     </div>
     {{/each}}
+
+{{!-- test --}}
+    <div class="post-card">
+        <h3 class="post-header">test title</h3>
+        <p class="p-3">test content</p>
+    </div>
+{{!-- test --}}
+
 </section>
