--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,9 +16,9 @@
   <header>
     <h1>The Tech Blog</h1>
     <ul class="list-group d-flex flex-row justify-content-evenly">
-      <li class="navItem"><a href="#">Home</a></li>
-      <li class="navItem"><a href="#">Dashboard</a></li>
-      <li class="navItem"><a href="#">Login</a></li>
+      <li class="navItem"><a href="/">Home</a></li>
+      <li class="navItem"><a href="/dashboard">Dashboard</a></li>
+      <li class="navItem"><a href="/login">Login</a></li>
     </ul>
   </header>
 
@@ -28,5 +28,6 @@
   
 </body>
 
-<script src="/js/script.js"></script>
+<script src="/js/dashboard.js"></script>
+<script src="/js/login.js"></script>
 </html>
