--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,12 @@ main {
     background-color: rgba(142, 157, 59, 0.3);
 }
 
+footer {
+    font-size: small;
+    position: relative;
+    left: 20px;
+}
+
 .navItem {
     list-style: none;
     display: flex;
