--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,9 +20,9 @@
       <li class="navItem"><a href="/dashboard">Dashboard</a></li>
 
       {{#if loggedIn}}
-      <li class="navItem" id="logout"><a href="/login">Logout</a></li>
+      <li class="navItem" id="logout"><a href="/user">Logout</a></li>
       {{else}}
-      <li class="navItem"><a href="/login">Login</a></li>
+      <li class="navItem"><a href="/user">Login</a></li>
       {{/if}}
     </ul>
   </header>
