--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
       {{#if loggedIn}}
       <li class="navItem" id="logout"><a href="/user">Logout</a></li>
       {{else}}
-      <li class="navItem"><a href="/user">Login</a></li>
+      <li class="navItem" id="login"><a href="/user">Login</a></li>
       {{/if}}
     </ul>
   </header>
