--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,26 +1,25 @@
-<section>
-    <p>{{myUsername}}'s Posts</p>
-    {{#each posts}}
-    <div class="post-card my-5">
-        <h3 class="post-header">{{this.title}}</h3>
-        <p class="p-3">{{this.content}}</p>
-        <footer class="p-3">
-            <p>Date created: {{this.createdAt}}</p>
-        </footer>
-    </div>
-    {{/each}}
+{{#if loggedIn}}
+    <section id="dashboard">
+        <p>{{myUsername}}'s Posts</p>
+        {{#each posts}}
+            {{> dashboard-posts}}
+        {{else}}
+            <h3>No posts</h3>
+        {{/each}}
+    </section>
 
-</section>
+    <button type="button" class="btn btn-outline-dark mt-5" id="add-post-btn">Create New Post</button>
 
-<button type="button" class="btn btn-outline-dark mt-5" id="add-post-btn">Create New Post</button>
-
-<form class="create-card d-none" id="form">
-    <h3 id="create-header">Create New Post</h3>
-    <div class="p-3">
-        <h4>Title</h4>
-        <input type="text" class="form-control" id="title-input" placeholder="Title">
-        <h4>Content</h4>
-        <textarea class="form-control form-content" id="content-input" placeholder="Content"></textarea>
-        <button type="submit" class="btn btn-secondary btn-sm mt-4" id="create-post-btn">Create Post</button>
-    </div>
-</form>
+    <form class="create-card d-none" id="form">
+        <h3 id="create-header">Create New Post</h3>
+        <div class="p-3">
+            <h4>Title</h4>
+            <input type="text" class="form-control" id="title-input" placeholder="Title">
+            <h4>Content</h4>
+            <textarea class="form-control form-content" id="content-input" placeholder="Content"></textarea>
+            <button type="submit" class="btn btn-secondary btn-sm mt-4" id="create-post-btn">Create Post</button>
+        </div>
+    </form>
+{{else}}
+    <h5><a href="/users">Login</a> to view your dashboard</h5>
+{{/if}}
