--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,13 +1,29 @@
-<section>
-    {{#each posts}}
-    <div class="post-card my-5">
-        <h3 class="post-header">{{this.title}}</h3>
-        <p class="p-3">{{this.content}}</p>
-        <footer class="p-3">
-            <p>Written by: {{this.user.username}}</p>
-            <p>Date created: {{this.createdAt}}</p>
-        </footer>
-    </div>
-    {{/each}}
-
-</section>
+{{#if loggedIn}}
+    <section id="homepage">
+        {{#each posts}}
+            <div class="post-card my-5" id="{{this.id}}">
+                <h3 class="post-header">{{this.title}}</h3>
+                <p class="p-3 d-none">{{this.content}}</p>
+                <p class="footer p-3 d-none">Written by: {{this.user.username}}</p>
+                <p class="footer p-3">Date created: {{this.createdAt}}</p>
+                <button class="m-3 btn btn-secondary" id="read-more">Read More</button>
+            </div>
+        {{else}}
+            <h5>No posts. Create your first post <a href="/dashboard">here.</a></h5>
+        {{/each}}
+    </section>
+{{else}}
+    <section id="homepage">
+        {{#each posts}}
+            <div class="post-card my-5" id="{{this.id}}">
+                <h3 class="post-header">{{this.title}}</h3>
+                <p class="p-3 d-none">{{this.content}}</p>
+                <p class="footer p-3 d-none">Written by: {{this.user.username}}</p>
+                <p class="footer p-3">Date created: {{this.createdAt}}</p>
+                <button class="m-3 btn btn-secondary" id="read-more">Read More</button>
+            </div>
+        {{else}}
+            <h5>No posts. Login and create your first post <a href="/users">here.</a></h5>
+        {{/each}}
+    </section>
+{{/if}}
