update post route added

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -21,5 +21,33 @@
         </div>
     </form>
 {{else}}
-    <h5><a href="/users">Login</a> to view your dashboard</h5>
+<h5><a href="/users">Login</a> to view your dashboard</h5>
 {{/if}}
+
+{{!------------------------------------------------------- --}}
+
+{{!-- {{#unless loggedIn}}
+    <h5><a href="/users">Login</a> to view your dashboard</h5>
+{{else}}
+    <section id="dashboard">
+        <p>{{myUsername}}'s Posts</p>
+        {{#each posts}}
+            {{> dashboard-posts}}
+        {{else}}
+            <h3>No posts</h3>
+        {{/each}}
+    </section>
+
+    <button type="button" class="btn btn-outline-dark mt-5" id="add-post-btn">Create New Post</button>
+
+    <form class="create-card d-none" id="form">
+        <h3 id="create-header">Create New Post</h3>
+        <div class="p-3">
+            <h4>Title</h4>
+            <input type="text" class="form-control" id="title-input" placeholder="Title">
+            <h4>Content</h4>
+            <textarea class="form-control form-content" id="content-input" placeholder="Content"></textarea>
+            <button type="submit" class="btn btn-secondary btn-sm mt-4" id="create-post-btn">Create Post</button>
+        </div>
+    </form>
+{{/unless}} --}}
