--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -12,8 +12,11 @@
             <h5>No posts. Create your first post <a href="/dashboard">here.</a></h5>
         {{/each}}
     </section>
+
+    <script src="/js/homepage.js"></script>
 {{else}}
     <section id="homepage">
+        <h6>To comment, <a href="/users">login.</a></h6>
         {{#each posts}}
             <div class="post-card my-5" id="{{this.id}}">
                 <h3 class="post-header">{{this.title}}</h3>
@@ -23,7 +26,7 @@
                 <button class="m-3 btn btn-secondary" id="read-more">Read More</button>
             </div>
         {{else}}
-            <h5>No posts. Login and create your first post <a href="/users">here.</a></h5>
+            <h5>No posts. Login and create a post <a href="/users">here.</a></h5>
         {{/each}}
     </section>
 {{/if}}
