--- a/views/partials/dashboard-posts.handlebars
+++ b/views/partials/dashboard-posts.handlebars
@@ -1,6 +1,8 @@
 <div class="post-card my-5" id="{{id}}">
-    <h3 class="post-header">{{title}}</h3>
-    <p class="p-3">{{content}}</p>
+    <h3 class="post-header" id="post-title">{{title}}</h3>
+    <p class="p-3" id="post-content">{{content}}</p>
+    <button class="m-3 btn btn-dark" id="edit"><a href="/dashboard/edit-post/{{id}}">Edit Post</a></button>
+    <button class="m-3 btn btn-secondary" id="delete">Delete Post</button>
     <footer class="p-3">
         <p>Date created: {{createdAt}}</p>
     </footer>
