--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,7 +6,7 @@
                 <p class="p-3 d-none">{{this.content}}</p>
                 <p class="footer p-3 d-none">Written by: {{this.user.username}}</p>
                 <p class="footer p-3">Date created: {{this.createdAt}}</p>
-                <button class="m-3 btn btn-secondary" id="read-more">Read More</button>
+                <button class="m-3 btn btn-secondary" id="read-more"><a href="/single-post/{{this.id}}">Read More</a></button>
             </div>
         {{else}}
             <h5>No posts. Create your first post <a href="/dashboard">here.</a></h5>
@@ -29,4 +29,5 @@
             <h5>No posts. Login and create a post <a href="/users">here.</a></h5>
         {{/each}}
     </section>
+    <script src="/js/homepage.js"></script>
 {{/if}}
